<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:defaultValue="1"
        android:entries="@array/diceNames"
        android:entryValues="@array/diceSizes"
        android:key="diceType"
        android:summary="@string/summary_dice_type"
        android:title="@string/dice_type" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="diceAnimate"
        android:summary="@string/summary_dice_animation"
        android:title="@string/dice_animation" />

    <ListPreference
        android:defaultValue="rotate"
        android:entries="@array/diceAnimation"
        android:entryValues="@array/diceAnimationKeys"
        android:key="diceAnimateType"
        android:summary="@string/summary_dice_animation_type"
        android:dependency="diceAnimate"
        android:title="@string/dice_animation_type" />
</PreferenceScreen>